# bank_mini_project

./: .gitignore  .gitmessage.txt  README.md  celerybeat-schedule.db  manage.py  pyproject.toml  test.sh  zshrc
.github/workflows/: ci.yml
analysis/: __init__.py  analyzers.py  celery.py  models.py  serializers.py  tasks.py  urls.py  views.py
analysis/migrations/: 0001_initial.py  0002_analysis_account.py
bank/: models.py  serializers.py  urls.py  views.py
bank/migrations/: 0001_initial.py  0002_alter_transactionhistory_td_date.py  0003_alter_transactionhistory_balance.py
bank_mini_project/: asgi.py  wsgi.py
bank_mini_project/settings/: base.py  prod.py
bank_mini_project/urls/: urls_prod.py
config/settings/: base.py  dev.py
config/urls/: urls_dev.py
member/: admin.py  forms.py  models.py  serializers.py  tests.py  tokens.py  urls.py  views.py
member/migrations/: 0001_initial.py  0002_users_email_verification_token_and_more.py
templates/: sign_up.html
